[tool.poetry]
name = "async-redis-cache"
version = "0.1.0"
description = "Python asyncio caching decorator backed by a Redis server or cluster."
authors = ["Blake VandeMerwe <blakev@null.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
