[tool.poetry]
name = "aiocacher"
version = "0.1.5"
description = "Python asyncio caching decorator backed by a Redis server or cluster."
authors = ["Blake VandeMerwe <blakev@null.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
dill = {version = ">=0.3.4", optional = true}
hiredis = ">=2.0.0"
toolz = ">=0.11.0"
ujson = {version = ">=5.1.0", optional = true}
aioredis = ">=2.0.0"

[tool.poetry.extras]
dill = ["dill"]
ujson = ["ujson"]

[tool.poetry.dev-dependencies]
invoke = "^1.6.0"
pytest = "^6.2.4"
yapf = "^0.31.0"
isort = "^5.9.2"
autoflake = "^1.4"
codespell = "^2.1.0"
pyflakes = "^2.3.1"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
vulture = "^2.3"
tox = "^3.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
